crates/wows-replays/tests/snapshots/20260213_203056_PFSD210-Marceau_22_tierra_del_fuego/packet_snapshots__packet_033.snap
---
source: crates/wows-replays/tests/packet_snapshots.rs
expression: value
---
clock: 0
packet_type: 8
payload:
  EntityMethod:
    args:
      - 4222600016
      - 4276503376
      - 0
      - 0
      - []
    entity_id: 1214224
    method: onConnected
