crates/wows-replays/tests/snapshots/20260213_203056_PFSD210-Marceau_22_tierra_del_fuego/packet_snapshots__packet_034.snap
---
source: crates/wows-replays/tests/packet_snapshots.rs
expression: value
---
clock: 0
packet_type: 40
payload:
  Map:
    arena_id: 280263795933185
    blob:
      - 0
      - 0
      - 0
      - 0
      - 0
      - 0
      - 0
      - 0
      - 0
      - 0
      - 0
      - 0
      - 198
      - 118
      - 10
      - 144
      - 67
      - 205
      - 202
      - 72
      - 160
      - 1
      - 188
      - 1
      - 0
      - 0
      - 202
      - 72
      - 160
      - 1
      - 188
      - 1
      - 0
      - 0
      - 24
      - 166
      - 248
      - 210
      - 246
      - 127
      - 0
      - 0
      - 109
      - 27
      - 0
      - 0
      - 1
      - 0
      - 0
      - 0
      - 10
      - 73
      - 160
      - 1
      - 188
      - 1
      - 0
      - 0
      - 0
      - 30
      - 24
      - 83
      - 248
      - 210
      - 246
      - 127
      - 0
      - 0
      - 0
      - 51
      - 213
      - 38
      - 183
      - 206
      - 234
      - 97
      - 8
      - 73
      - 160
      - 1
      - 188
      - 1
      - 0
      - 0
      - 9
      - 73
      - 160
      - 1
      - 188
      - 1
      - 0
      - 0
      - 24
      - 166
      - 248
      - 210
      - 246
      - 127
      - 0
      - 0
      - 109
      - 27
      - 0
      - 0
      - 0
      - 0
      - 0
      - 0
      - 74
      - 73
      - 160
      - 1
      - 188
      - 1
      - 0
      - 0
      - 0
      - 0
      - 0
      - 0
      - 21
      - 0
      - 65
      - 193
      - 24
      - 83
      - 248
      - 210
    map_name: spaces/22_tierra_del_fuego
    matrix:
      - 0
      - 0
      - 128
      - 63
      - 0
      - 0
      - 0
      - 0
      - 0
      - 0
      - 0
      - 0
      - 0
      - 0
      - 0
      - 0
      - 0
      - 0
      - 0
      - 0
      - 0
      - 0
      - 128
      - 63
      - 0
      - 0
      - 0
      - 0
      - 0
      - 0
      - 0
      - 0
      - 0
      - 0
      - 0
      - 0
      - 0
      - 0
      - 0
      - 0
      - 0
      - 0
      - 128
      - 63
      - 0
      - 0
      - 0
      - 0
      - 0
      - 0
      - 0
      - 0
      - 0
      - 0
      - 0
      - 0
      - 0
      - 0
      - 0
      - 0
      - 0
      - 0
      - 128
      - 63
    space_id: 7162
    unknown: 1
    unknown1: 4109500418
    unknown2: 3242430474
