crates/wows-replays/tests/snapshots/20260213_203056_PFSD210-Marceau_22_tierra_del_fuego/packet_snapshots__packet_036.snap
---
source: crates/wows-replays/tests/packet_snapshots.rs
expression: value
---
clock: 0
packet_type: 5
payload:
  EntityCreate:
    entity_id: 1214231
    entity_type: Vehicle
    position:
      x: -120
      y: 0
      z: 450.00018310546875
    props:
      airDefenseDispRadius: 0
      airDefenseTargetIds:
        - []
        - []
        - []
      antiAirAuras:
        - enabled: 1
          id: 0
        - enabled: 1
          id: 1
        - enabled: 1
          id: 2
      blockedControls: 0
      buoyancy: 200000
      buoyancyCurrentState: 0
      buoyancyCurrentWaterline: 0
      buoyancyRudderIndex: 0
      burningFlags: 0
      crewModifiersCompactParams:
        isInAdaptation: 0
        learnedSkills:
          - []
          - []
          - - 6
            - 12
            - 17
            - 19
            - 23
          - []
          - []
          - []
        paramsId: 4189235120
      deathSettings:
        - 176
        - 199
        - 230
        - 255
      debugText: []
      deepRuddersAngle: 0
      draught: 0
      effects: []
      engineDir: 0
      enginePower: 0
      hasActiveMainSquadron: 0
      hasAirTargetsInRange: 0
      health: 32500
      ignoreMapBorders: 0
      isAlive: 1
      isAntiAirMode: 0
      isBot: 0
      isFogHornOn: 0
      isInRageMode: 0
      isInvisible: 0
      isOnForsage: 0
      laserTargetLocalPos: 0
      maxHealth: 32500
      maxServerSpeedRaw: 918719
      miscsPresetsStatus: []
      oilLeakState: 0
      owner: 1214230
      regenCrewHpLimit: 0
      regeneratedHealth: 0
      regenerationHealth: 0
      respawnTime: 0
      ruddersAngle: 0
      selectedWeapon: 0
      serverSpeedRaw: 0
      shipConfig:
        - 1
        - 0
        - 0
        - 0
        - 208
        - 180
        - 30
        - 249
        - 42
        - 0
        - 0
        - 0
        - 14
        - 0
        - 0
        - 0
        - 208
        - 44
        - 156
        - 199
        - 208
        - 172
        - 159
        - 199
        - 208
        - 44
        - 134
        - 199
        - 208
        - 172
        - 150
        - 199
        - 208
        - 172
        - 157
        - 199
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 6
        - 0
        - 0
        - 0
        - 176
        - 207
        - 18
        - 254
        - 176
        - 207
        - 162
        - 251
        - 176
        - 207
        - 226
        - 253
        - 176
        - 207
        - 114
        - 254
        - 176
        - 207
        - 66
        - 254
        - 176
        - 207
        - 18
        - 255
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 6
        - 0
        - 0
        - 0
        - 176
        - 159
        - 98
        - 255
        - 176
        - 159
        - 18
        - 255
        - 176
        - 159
        - 66
        - 255
        - 176
        - 159
        - 210
        - 254
        - 176
        - 159
        - 82
        - 255
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 4
        - 0
        - 0
        - 0
        - 176
        - 239
        - 79
        - 255
        - 0
        - 0
        - 0
        - 0
        - 176
        - 239
        - 15
        - 254
        - 176
        - 239
        - 111
        - 253
        - 26
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 38
        - 0
        - 0
        - 0
      sounds: []
      speedSignDir: 1
      state:
        atba:
          atbaTargets: []
        battery: ~
        buffs:
          buffItems: []
        decals:
          heatDecals: []
          shotDecals: []
        vehicleVisualState: 0
      targetLocalPos: 65535
      teamId: 0
      torpedoLocalPos: 4352
      triggeredSkillsData: 0
      uiEnabled: 1
      visibilityFlags: 0
      waveLocalPos: 4352
      weaponLockFlags: 0
    rotation:
      pitch: 0
      roll: 0
      yaw: -3.1415927410125732
    space_id: 0
    spec_idx: 2
    state_length: 381
    vehicle_id: 7162
