crates/wows-replays/tests/snapshots/20260213_203056_PFSD210-Marceau_22_tierra_del_fuego/packet_snapshots__packet_037.snap
---
source: crates/wows-replays/tests/packet_snapshots.rs
expression: value
---
clock: 0
packet_type: 5
payload:
  EntityCreate:
    entity_id: 1214227
    entity_type: Vehicle
    position:
      x: -520
      y: 0
      z: 500
    props:
      airDefenseDispRadius: 0
      airDefenseTargetIds:
        - []
        - []
        - []
        - []
        - []
        - []
        - []
        - []
        - []
        - []
      antiAirAuras:
        - enabled: 1
          id: 0
        - enabled: 1
          id: 1
        - enabled: 1
          id: 2
        - enabled: 1
          id: 3
        - enabled: 1
          id: 4
        - enabled: 1
          id: 5
        - enabled: 1
          id: 6
        - enabled: 1
          id: 7
        - enabled: 1
          id: 8
        - enabled: 1
          id: 9
      blockedControls: 0
      buoyancy: 200000
      buoyancyCurrentState: 0
      buoyancyCurrentWaterline: 0
      buoyancyRudderIndex: 0
      burningFlags: 0
      crewModifiersCompactParams:
        isInAdaptation: 0
        learnedSkills:
          - []
          - - 2
            - 12
            - 14
            - 18
            - 28
            - 37
            - 42
          - - 3
            - 4
            - 12
            - 17
            - 20
            - 23
            - 28
            - 30
          - - 4
            - 12
            - 13
            - 17
            - 18
            - 20
            - 23
            - 25
            - 60
          - []
          - []
        paramsId: 4293043920
      deathSettings:
        - 176
        - 199
        - 230
        - 255
      debugText: []
      deepRuddersAngle: 0
      draught: 0
      effects: []
      engineDir: 0
      enginePower: 0
      hasActiveMainSquadron: 0
      hasAirTargetsInRange: 0
      health: 107450
      ignoreMapBorders: 0
      isAlive: 1
      isAntiAirMode: 0
      isBot: 0
      isFogHornOn: 0
      isInRageMode: 0
      isInvisible: 0
      isOnForsage: 0
      laserTargetLocalPos: 0
      maxHealth: 107450
      maxServerSpeedRaw: 745416
      miscsPresetsStatus: []
      oilLeakState: 0
      owner: 1214226
      regenCrewHpLimit: 0
      regeneratedHealth: 0
      regenerationHealth: 0
      respawnTime: 0
      ruddersAngle: 0
      selectedWeapon: 0
      serverSpeedRaw: 0
      shipConfig:
        - 1
        - 0
        - 0
        - 0
        - 208
        - 54
        - 255
        - 210
        - 54
        - 0
        - 0
        - 0
        - 14
        - 0
        - 0
        - 0
        - 208
        - 46
        - 28
        - 209
        - 208
        - 174
        - 31
        - 209
        - 0
        - 0
        - 0
        - 0
        - 208
        - 174
        - 22
        - 209
        - 208
        - 174
        - 29
        - 209
        - 208
        - 46
        - 29
        - 209
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 208
        - 46
        - 30
        - 209
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 6
        - 0
        - 0
        - 0
        - 176
        - 207
        - 18
        - 254
        - 176
        - 207
        - 178
        - 254
        - 176
        - 207
        - 226
        - 253
        - 176
        - 207
        - 34
        - 250
        - 176
        - 207
        - 66
        - 254
        - 176
        - 207
        - 34
        - 255
        - 10
        - 0
        - 0
        - 0
        - 176
        - 111
        - 29
        - 254
        - 176
        - 111
        - 125
        - 255
        - 176
        - 111
        - 109
        - 255
        - 176
        - 111
        - 141
        - 255
        - 176
        - 111
        - 29
        - 255
        - 176
        - 111
        - 253
        - 254
        - 176
        - 111
        - 221
        - 254
        - 176
        - 111
        - 173
        - 255
        - 176
        - 111
        - 238
        - 254
        - 176
        - 239
        - 233
        - 254
        - 2
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 6
        - 0
        - 0
        - 0
        - 176
        - 159
        - 98
        - 255
        - 176
        - 159
        - 82
        - 255
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 2
        - 0
        - 0
        - 0
        - 176
        - 239
        - 109
        - 206
        - 176
        - 239
        - 221
        - 247
        - 4
        - 0
        - 0
        - 0
        - 176
        - 239
        - 63
        - 255
        - 176
        - 239
        - 159
        - 254
        - 176
        - 239
        - 255
        - 253
        - 176
        - 239
        - 95
        - 253
        - 30
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 27
        - 0
        - 0
        - 0
      sounds: []
      speedSignDir: 1
      state:
        atba:
          atbaTargets:
            - 0
            - 0
            - 0
            - 0
            - 0
            - 0
            - 0
            - 0
            - 0
            - 0
            - 0
            - 0
            - 0
            - 0
        battery: ~
        buffs:
          buffItems: []
        decals:
          heatDecals: []
          shotDecals: []
        vehicleVisualState: 0
      targetLocalPos: 65535
      teamId: 0
      torpedoLocalPos: 4607
      triggeredSkillsData: 0
      uiEnabled: 1
      visibilityFlags: 0
      waveLocalPos: 4607
      weaponLockFlags: 0
    rotation:
      pitch: 0
      roll: 0
      yaw: -3.1415927410125732
    space_id: 0
    spec_idx: 2
    state_length: 525
    vehicle_id: 7162
