crates/wows-replays/tests/snapshots/20260213_203056_PFSD210-Marceau_22_tierra_del_fuego/packet_snapshots__packet_038.snap
---
source: crates/wows-replays/tests/packet_snapshots.rs
expression: value
---
clock: 0
packet_type: 5
payload:
  EntityCreate:
    entity_id: 1214223
    entity_type: Vehicle
    position:
      x: -120
      y: 0
      z: 550.0001220703125
    props:
      airDefenseDispRadius: 0
      airDefenseTargetIds:
        - []
        - []
        - []
        - []
      antiAirAuras:
        - enabled: 1
          id: 0
        - enabled: 1
          id: 1
        - enabled: 1
          id: 2
        - enabled: 1
          id: 3
      blockedControls: 0
      buoyancy: 200000
      buoyancyCurrentState: 0
      buoyancyCurrentWaterline: 0
      buoyancyRudderIndex: 0
      burningFlags: 0
      crewModifiersCompactParams:
        isInAdaptation: 0
        learnedSkills:
          - - 10
            - 11
            - 56
            - 58
            - 59
          - []
          - []
          - []
          - []
          - []
        paramsId: 3864176624
      deathSettings:
        - 176
        - 199
        - 230
        - 255
      debugText: []
      deepRuddersAngle: 0
      draught: 0
      effects: []
      engineDir: 0
      enginePower: 0
      hasActiveMainSquadron: 0
      hasAirTargetsInRange: 0
      health: 59500
      ignoreMapBorders: 0
      isAlive: 1
      isAntiAirMode: 0
      isBot: 0
      isFogHornOn: 0
      isInRageMode: 0
      isInvisible: 0
      isOnForsage: 0
      laserTargetLocalPos: 0
      maxHealth: 59500
      maxServerSpeedRaw: 866520
      miscsPresetsStatus: []
      oilLeakState: 0
      owner: 1214222
      regenCrewHpLimit: 0
      regeneratedHealth: 0
      regenerationHealth: 0
      respawnTime: 0
      ruddersAngle: 0
      selectedWeapon: 0
      serverSpeedRaw: 0
      shipConfig:
        - 1
        - 0
        - 0
        - 0
        - 240
        - 183
        - 191
        - 254
        - 43
        - 0
        - 0
        - 0
        - 14
        - 0
        - 0
        - 0
        - 240
        - 47
        - 252
        - 197
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 240
        - 175
        - 173
        - 197
        - 240
        - 47
        - 221
        - 198
        - 240
        - 175
        - 123
        - 198
        - 240
        - 47
        - 15
        - 199
        - 240
        - 47
        - 110
        - 198
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 6
        - 0
        - 0
        - 0
        - 176
        - 207
        - 194
        - 255
        - 176
        - 207
        - 178
        - 251
        - 176
        - 207
        - 162
        - 253
        - 176
        - 207
        - 242
        - 251
        - 176
        - 207
        - 98
        - 251
        - 176
        - 207
        - 226
        - 254
        - 1
        - 0
        - 0
        - 0
        - 240
        - 239
        - 102
        - 243
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 6
        - 0
        - 0
        - 0
        - 176
        - 159
        - 162
        - 253
        - 176
        - 159
        - 146
        - 253
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 4
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 176
        - 239
        - 159
        - 254
        - 176
        - 239
        - 255
        - 253
        - 176
        - 239
        - 95
        - 253
        - 30
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 58
        - 0
        - 0
        - 0
      sounds: []
      speedSignDir: 1
      state:
        atba:
          atbaTargets:
            - 0
            - 0
            - 0
            - 0
            - 0
            - 0
            - 0
            - 0
        battery: ~
        buffs:
          buffItems: []
        decals:
          heatDecals: []
          shotDecals: []
        vehicleVisualState: 0
      targetLocalPos: 65535
      teamId: 0
      torpedoLocalPos: 4352
      triggeredSkillsData: 0
      uiEnabled: 1
      visibilityFlags: 0
      waveLocalPos: 4352
      weaponLockFlags: 0
    rotation:
      pitch: 0
      roll: 0
      yaw: -3.1415927410125732
    space_id: 0
    spec_idx: 2
    state_length: 420
    vehicle_id: 7162
