crates/wows-replays/tests/snapshots/20260213_203056_PFSD210-Marceau_22_tierra_del_fuego/packet_snapshots__packet_039.snap
---
source: crates/wows-replays/tests/packet_snapshots.rs
expression: value
---
clock: 0
packet_type: 5
payload:
  EntityCreate:
    entity_id: 1214225
    entity_type: Vehicle
    position:
      x: -600
      y: 0
      z: 400
    props:
      airDefenseDispRadius: 0
      airDefenseTargetIds:
        - []
        - []
        - []
        - []
      antiAirAuras:
        - enabled: 1
          id: 0
        - enabled: 1
          id: 1
        - enabled: 1
          id: 2
        - enabled: 1
          id: 3
      blockedControls: 0
      buoyancy: 200000
      buoyancyCurrentState: 0
      buoyancyCurrentWaterline: 0
      buoyancyRudderIndex: 0
      burningFlags: 0
      crewModifiersCompactParams:
        isInAdaptation: 0
        learnedSkills:
          - []
          - - 12
            - 14
            - 21
            - 23
            - 42
            - 44
            - 61
          - - 6
            - 13
            - 17
            - 20
            - 21
            - 23
            - 25
            - 47
            - 63
          - - 9
            - 12
            - 18
            - 20
            - 23
            - 25
            - 34
          - []
          - []
        paramsId: 3869419344
      deathSettings:
        - 176
        - 199
        - 230
        - 255
      debugText: []
      deepRuddersAngle: 0
      draught: 0
      effects: []
      engineDir: 0
      enginePower: 0
      hasActiveMainSquadron: 0
      hasAirTargetsInRange: 0
      health: 27200
      ignoreMapBorders: 0
      isAlive: 1
      isAntiAirMode: 0
      isBot: 0
      isFogHornOn: 0
      isInRageMode: 0
      isInvisible: 0
      isOnForsage: 0
      laserTargetLocalPos: 0
      maxHealth: 27200
      maxServerSpeedRaw: 1211301
      miscsPresetsStatus: []
      oilLeakState: 0
      owner: 1214224
      regenCrewHpLimit: 0
      regeneratedHealth: 0
      regenerationHealth: 0
      respawnTime: 0
      ruddersAngle: 0
      selectedWeapon: 0
      serverSpeedRaw: 0
      shipConfig:
        - 1
        - 0
        - 0
        - 0
        - 80
        - 55
        - 222
        - 242
        - 54
        - 0
        - 0
        - 0
        - 14
        - 0
        - 0
        - 0
        - 80
        - 47
        - 124
        - 199
        - 80
        - 175
        - 111
        - 199
        - 80
        - 47
        - 134
        - 199
        - 80
        - 175
        - 118
        - 199
        - 80
        - 175
        - 125
        - 199
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 6
        - 0
        - 0
        - 0
        - 176
        - 207
        - 18
        - 254
        - 176
        - 207
        - 178
        - 253
        - 176
        - 207
        - 226
        - 253
        - 176
        - 207
        - 114
        - 254
        - 176
        - 207
        - 66
        - 254
        - 176
        - 207
        - 34
        - 255
        - 10
        - 0
        - 0
        - 0
        - 176
        - 111
        - 206
        - 255
        - 176
        - 111
        - 29
        - 255
        - 176
        - 111
        - 29
        - 254
        - 176
        - 111
        - 173
        - 255
        - 176
        - 111
        - 45
        - 254
        - 176
        - 111
        - 253
        - 254
        - 176
        - 111
        - 221
        - 254
        - 176
        - 111
        - 157
        - 255
        - 176
        - 111
        - 237
        - 254
        - 176
        - 239
        - 9
        - 245
        - 2
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 6
        - 0
        - 0
        - 0
        - 176
        - 159
        - 98
        - 255
        - 176
        - 159
        - 66
        - 255
        - 176
        - 159
        - 2
        - 255
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 2
        - 0
        - 0
        - 0
        - 176
        - 239
        - 29
        - 209
        - 176
        - 239
        - 141
        - 206
        - 4
        - 0
        - 0
        - 0
        - 176
        - 239
        - 63
        - 255
        - 0
        - 0
        - 0
        - 0
        - 176
        - 239
        - 15
        - 254
        - 0
        - 0
        - 0
        - 0
        - 30
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 0
        - 15
        - 0
        - 0
        - 0
      sounds: []
      speedSignDir: 1
      state:
        atba:
          atbaTargets: []
        battery: ~
        buffs:
          buffItems: []
        decals:
          heatDecals: []
          shotDecals: []
        vehicleVisualState: 0
      targetLocalPos: 65535
      teamId: 0
      torpedoLocalPos: 4607
      triggeredSkillsData: 0
      uiEnabled: 1
      visibilityFlags: 0
      waveLocalPos: 4607
      weaponLockFlags: 0
    rotation:
      pitch: 0
      roll: 0
      yaw: -3.1415927410125732
    space_id: 0
    spec_idx: 2
    state_length: 450
    vehicle_id: 7162
